# anemoi-demo-keisler2022

./: .gitignore  1_create_dataset.ipynb  2_create_graph.ipynb  README.md  pyproject.toml  requirements.txt
configs/: graph.yaml  keisler-era5-gs-weatherbench2-1p0d-1979-1979-3h-v0.yaml  keisler-era5-gs-weatherbench2-1p0d-1979-1979-v0.yaml
configs/datasets/: keisler-era5-gs-weatherbench2-1p0d-1979-1979-3h-v0.yaml
configs/graphs/: era5-360x181equiangularwithpolesconservative-hexnodes.yaml  o96_multi_scale.yaml
configs/inference/: dataset_to_grib.yaml  inference_from_dataset.yaml
configs/training/: debug.yaml  demo.yaml
configs/training/diagnostics/: evaluation.yaml
notebooks/: 1_create_dataset.ipynb  1b_use_datasets.ipynb  2_create_graph.ipynb  3_training_config.ipynb  4_inference.ipynb
src/anemoi_demo_keisler2022/: __init__.py  helpers.py
