[project]
name = "anemoi-demo-keisler2022"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Anemoi contributors" }
]
requires-python = ">=3.12"
dependencies = [
    "anemoi-datasets>=0.5.26",
    "anemoi-env>=2025.10.1",
    "anemoi-graphs>=0.6.6",
    "anemoi-training>=0.6.6,<0.7.0",
    "boto3>=1.40.56",
    "cartopy>=0.25.0",
    "cdsapi>=0.7.6",
    "eccodes==2.39.1",
    "ecmwf-api-client>=1.6.5",
    "gcsfs>=2025.9.0",
    "mlflow==3.4.0",
    "obstore>=0.8.2",
    "torch<2.7",
    "torch-cluster>=1.6.3",
    "torch-geometric<2.5",
    "trimesh>=4.8.3",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "ipykernel>=6.30.1",
]

[project.scripts]
anemoi-demo-keisler2022 = "anemoi_demo_keisler2022:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu121" },
]
